logs/API_interface_EL_ver00.1756929590.log
  File "/home/developer/API/API_interface_EL_ver00.py", line 303
    print(f"
          ^
SyntaxError: unterminated f-string literal (detected at line 303)
